--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Nihongo_Horizontal.svg/330px-Nihongo_Horizontal.svg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nihongo Quiz ninjin 🥕</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
 </head>
   <body>
     <div id="root"></div>
